# yetanotherproxy

./: CMakeLists.txt  LICENSE  README.md
data/: config.json
include/: datastore.hpp  proxy.hpp  scraper.hpp  tester.hpp  tui.hpp  utils.hpp
scripts/: build.ps1  build.sh  package.py
src/: datastore.cpp  main.cpp  scraper.cpp  tester.cpp  tui.cpp  utils.cpp
tests/: CMakeLists.txt  test_datastore.cpp  test_scraper.cpp  test_tester.cpp  test_utils.cpp
